@@ -2251,20 +2251,25 @@
     </tr>
 
     <tr>
-      <td><pre>-resolvedata &lt;never|always|auto&gt;</pre></td>
+      <td><pre>-dis.resolvedata &lt;never|always|auto&gt;</pre></td>
       <td>Try to differentiate between code vs. data sections in the
       disassembler.  See the Debugger section for more information.</td>
     </tr>
 
     <tr>
-      <td><pre>-gfxformat &lt;2|16&gt;</pre></td>
+      <td><pre>-dis.gfxformat &lt;2|16&gt;</pre></td>
       <td>Sets the base to use for displaying GFX sections in the disassembler.
       </td>
     </tr>
 
     <tr>
-      <td><pre>-showaddr &lt;1|0&gt;</pre></td>
+      <td><pre>-dis.showaddr &lt;1|0&gt;</pre></td>
       <td>Shows/hides opcode addresses in the disassembler.</td>
+    </tr>
+
+    <tr>
+      <td><pre>-dis.relocate &lt;1|0&gt;</pre></td>
+      <td>Relocate calls out of address range.</td>
     </tr>
 
     <tr>
