@@ -40,13 +40,18 @@
     a multi-file archive before using each ROM.  Thanks go to Roland
     Schabenberger (webOS maintainer) for this idea and sample code.
 
-  * Fixed several bugs in debugger disassembly:
+  * Several improvements to the debugger/disassembler:
+      - The 'resolvedata', 'showaddr' and 'gfxformat' commandline
+        arguments are renamed to start with 'dis', indicating that
+        they're used with the built-in disassembler.
       - Zero-page code addresses no longer have their high-byte
         truncated, and system equates (TIA and I/O registers) are now
         properly marked as such.
       - The Distella '-r' option (Relocate calls out of address range)
         is no longer the default, resulting in output more consistent
-        with normal usage of Distella.
+        with normal usage of Distella.  Related to this, added the
+        '-dis.relocate' commandline argument (and associated UI item)
+        to toggle this dynamically.
 
   * Fixed bug in EFSC bankswitch scheme state saving; the Superchip RAM
     wasn't actually being loaded and saved to state files.
